# kxn

./: .clinerules  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.tr.md  README.zh.md  SECURITY.md  install.sh  kxn.toml  kxn.toml.example  release-please-config.json
.github/workflows/: cd.yml  ci.yml  docker-publish.yml  pr-target-check.yml  release-please.yml  release.yml
crates/kxn-cli/: Cargo.toml
crates/kxn-cli/src/: config.rs  main.rs  output.rs  remediation.rs  table.rs  utils.rs
crates/kxn-cli/src/alerts/: discord.rs  email.rs  jira.rs  kafka.rs  linear.rs  mod.rs  opsgenie.rs  pagerduty.rs  servicenow.rs  slack.rs  sms.rs  splunk.rs  teams.rs  zendesk.rs
crates/kxn-cli/src/commands/: check.rs  cve_update.rs  gather.rs  init.rs  list_providers.rs  list_rules.rs  list_targets.rs  logs.rs  mod.rs  monitor.rs  remediate.rs  rules.rs  scan.rs  serve.rs  tools.rs  update.rs  watch.rs  webhook.rs
crates/kxn-cli/src/save/: cloud_storage.rs  elasticsearch.rs  eventhubs.rs  file.rs  influxdb.rs  kafka.rs  loki.rs  mod.rs  mongo.rs  mysql.rs  postgres.rs  pubsub.rs  redis.rs  sns.rs  splunk_hec.rs
crates/kxn-cli/tests/: check_test.rs
crates/kxn-core/: Cargo.toml
crates/kxn-core/src/: error.rs  lib.rs
crates/kxn-core/src/engine/: conditions.rs  evaluator.rs  mod.rs  property.rs
crates/kxn-core/src/models/: enums.rs  mod.rs  rule.rs  scan.rs
crates/kxn-mcp/: Cargo.toml
crates/kxn-mcp/src/: lib.rs  server.rs  tools.rs
crates/kxn-providers/: Cargo.toml  build.rs
crates/kxn-providers/src/: azure_arm.rs  config.rs  cve_db.rs  error.rs  http.rs  lib.rs  profile.rs  traits.rs
crates/kxn-providers/src/native/: azure_webapp.rs  cloud_run.rs  cve_feeds.rs  docker.rs  gcp.rs  github.rs  grpc.rs  http.rs  kubernetes.rs  kubernetes_log_tail.rs  local.rs  microsoft_graph.rs  mod.rs  mongodb.rs  mysql.rs  oracle.rs  postgresql.rs  prometheus.rs  ssh.rs
crates/kxn-providers/src/secrets/: aws_secrets.rs  azure_keyvault.rs  gcp_secrets.rs  hashicorp_vault.rs  mod.rs
crates/kxn-providers/src/terraform/: client.rs  grpc.rs  handshake.rs  mod.rs  protocol.rs  provider.rs  registry.rs
crates/kxn-rules/: Cargo.toml
crates/kxn-rules/src/: config.rs  filter.rs  lib.rs  parser.rs  secrets.rs  types.rs
deploy/examples/grafana/: README.md  kxn-backups.json  kxn-certs.json  kxn-cloud-logs.json  kxn-cluster.json  kxn-disks.json  kxn-ingress.json  kxn-k8s-system.json  kxn-namespaces.json  kxn-netpolicies.json  kxn-pod-logs.json  kxn-postgres.json  kxn-security.json  kxn-top-consumers.json  kxn-traefik.json
deploy/examples/rules/: README.md  cluster-health.toml  postgres-app-rules.toml
deploy/harbor/: docker-compose.yml
deploy/harbor/rules/: harbor-monitoring.toml
deploy/helm/kxn-logs/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/helm/kxn-logs/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  rbac.yaml  serviceaccount.yaml
deploy/helm/kxn-monitor/: Chart.yaml
deploy/helm/kxn-monitor/templates/: _helpers.tpl  configmap.yaml
deploy/helm/kxn-stack/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/helm/kxn-stack/charts/kxn-monitor/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/helm/kxn-stack/charts/kxn-monitor/templates/: NOTES.txt  deployment.yaml  rbac.yaml  serviceaccount.yaml
deploy/helm/kxn-stack/files/: schema.sql
deploy/helm/kxn-stack/files/collectors/: certs-collector.sh  disk-usage-collector.sh  jobs-collector.sh  logs-collector.sh  netpol-collector.sh  pod-resource-collector.sh
deploy/helm/kxn-stack/files/dashboards/: kxn-cloud-logs.json  kxn-compliance.json  kxn-errors.json  kxn-k8s-pods.json  kxn-postgres.json  kxn-tenants.json  kxn-traefik-deep.json  kxn-traefik-live.json
deploy/helm/kxn-stack/templates/: NOTES.txt  _helpers.tpl  collectors-rbac.yaml  collectors.yaml  dashboards.yaml  extra-rbac.yaml  grafana-datasource.yaml  grafana-deps-placeholder.yaml  kxn-logs.yaml  loki.yaml  mongo.yaml  postgres.yaml  schema-init-job.yaml  webhooks-secret.yaml
deploy/kubernetes/: kxn-pod-monitor.yaml
docs/: agent-integration.md  alerting-and-saving.md  configuration.md  cookbook-k8s-monitoring.md  cve-detection.md  event-driven.md  getting-started.md  kubernetes-pod-monitor.md  kubernetes-rotation-azure.md  kubernetes-rotation-gcp.md  providers.md  rules.md  secret-rotation.md
profiles/: aws.json  azure.json  cloudflare.json  datadog.json  gcp.json  github.json  helm.json  kubernetes.json  o365.json  proxmox.json  vault.json  workspace.json
rules/: apache-cis.toml  api-monitoring.toml  api-security.toml  aws-cis.toml  aws-iam-cis.toml  azure-cis.toml  azure-iam-cis.toml  azure-sp-expiry.toml  compliance-mapping.toml  cve-monitoring.toml  db-log-monitoring.toml  docker-cis.toml  entra-id-cis.toml  gcp-cis.toml  gcp-iam-cis.toml  gcp-sa-key-expiry.toml  github-security.toml  google-workspace-cis.toml  grafana-monitoring.toml  grpc-monitoring.toml  grpc-security.toml  http-monitoring.toml  http-security.toml  kubernetes-cis.toml  kubernetes-master-cis.toml  kubernetes-node-cis.toml  kubernetes.toml  linux-cis.toml  log-monitoring.toml  mongodb-cis.toml  mongodb-dba.toml  mongodb-monitoring.toml  monitoring.toml  mysql-cis.toml  mysql-dba.toml  mysql-monitoring.toml  nginx-cis.toml  o365-cis.toml  oracle-cis.toml  oracle-dba.toml  (+10 more)
skills/: README.md
skills/kxn-scan/: SKILL.md
