[package]
name = "kxn-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kxn"
path = "src/main.rs"

[dependencies]
kxn-core = { workspace = true }
kxn-rules = { workspace = true }
kxn-providers = { workspace = true }
kxn-mcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true }
futures = "0.3"
