[package]
name = "kxn-cli"
version = "0.36.0"
edition = "2021"

[[bin]]
name = "kxn"
path = "src/main.rs"

[dependencies]
kxn-core = { workspace = true }
kxn-rules = { workspace = true }
kxn-providers = { workspace = true }
kxn-mcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { workspace = true }
futures = "0.3"
toml = { workspace = true }
regex = { workspace = true }
tokio-postgres = { workspace = true }
mysql_async = { workspace = true }
mongodb = { workspace = true }
uuid = { version = "1", features = ["v4"] }
reqwest = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
gcp_auth = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }
glob = { workspace = true }
lettre = { workspace = true }
axum = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
