[package]
name = "kxn-mcp"
version = "0.7.0"
edition = "2021"

[dependencies]
kxn-core = { workspace = true }
kxn-rules = { workspace = true }
kxn-providers = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rmcp = { workspace = true }
