[package]
name = "kxn-providers"
version = "0.11.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
base64 = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
dirs = { workspace = true }
mysql_async = { workspace = true }
tokio-postgres = { workspace = true }
hickory-resolver = { workspace = true }
native-tls = { workspace = true }
tokio-native-tls = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
mongodb = { workspace = true }
async-ssh2-tokio = { workspace = true }
gcp_auth = { workspace = true }
tokio-stream = { workspace = true }
http = { workspace = true }
sibyl = { workspace = true, optional = true }

[features]
default = []
oracle = ["sibyl"]

[lib]
doctest = false

[build-dependencies]
tonic-build = { workspace = true }
